# anime-organizer-rs

./: .gitignore  Cargo.toml  paths.toml
.github/workflows/: rust.yml
src/: copy_watcher.rs  main.rs  sync_watcher.rs
