cargo-features = ["codegen-backend", "profile-rustflags"]

[package]
name = "anime-organizer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anitomy = { git = "https://github.com/Rapptz/anitomy-rs.git", rev = "c5271be1d9fe71a49e93e98ac3f982b38e6e27b6" }
anyhow = "1.0.100"
lazy_static = "1.5.0"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["default", "fs", "rt-multi-thread", "rt", "macros", "sync", "time"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
walkdir = "2.5.0"

[profile.dev]
debug = 0
codegen-backend = "cranelift"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
